Add some html tags to the index file

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -4,7 +4,22 @@
 	<meta charset="UTF-8">
 	<title>My first web page</title>
 </head>
+
 <body>
 	<h1>Hello World!</h1>
+	<p><a href="http://www.lipsum.com/">Lorem ipsum</a> <strong>dolor</strong> sit amet, consectetur adipisicing elit. Mollitia quo numquam quod quae accusantium, dolore modi nam iste ducimus officia a, unde dolor? Culpa veniam fugit commodi, quibusdam, omnis hic.</p>
+
+	<h2>Here's another heading</h2>
+	<p>Lorem ipsum dolor sit amet, <em>consectetur</em> adipisicing elit. Unde dolores, sit quos voluptatum repudiandae, odit ab, asperiores, delectus consequatur eaque minima voluptate aperiam obcaecati ipsum distinctio? Perspiciatis rem in veniam!</p>
+
+	<ul>
+		<li>First item</li>
+		<li>Second item</li>
+	</ul>
+
+	<ol>
+		<li>Item 1</li>
+		<li>Item 2</li>
+	</ol>
 </body>
 </html>
