--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Practice creating tables</title>
 </head>
+
 <body>
-	<h1>This is an exemple of a table</h1>
-  <table border=1>
+	<h1>This is a html table</h1>
+  <table border="1">
   	<tr>
   		<th>Colors</th>
   		<th>Pets</th>
@@ -27,6 +28,29 @@
   		<td>Pigs</td>
   		<td>Oranges</td>
   	</tr>
+  </table>
+
+  <h2>This is a better html table</h2>
+
+    <table border="1">
+      <tr>
+        <th>Column 1</th>
+        <th>Column 2</th>
+        <th>Column 3</th>
+      </tr>
+      <tr>
+        <td>Cell 1</td>
+        <td colspan="2">Cell 2</td>
+      </tr>
+      <tr>
+        <td rowspan=2>Two rows</td>
+        <td>Cell 1</td>
+        <td>Cell 2</td>
+      </tr>
+      <tr>
+        <td>Cell 1</td>
+        <td>Cell 2</td>
+      </tr>
   </table>
 </body>
 </html>
