--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,6 +5,10 @@
 	<title>Cats on the moon</title>
 </head>
 <body>
-	
+<ul>
+	<li> <a href="contact.html">Contact</a></li>
+	<li> <a href="product_details.html">Product Details</a></li>
+	<li><a href="legal/waiver.html">Waiver Pages</a></li>
+</ul>	
 </body>
 </html>
