Add home navigation

--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 	<h1>You can reach us at: 555-555-555</h1>
+
+	<footer>
+		<p><a href="index.html">Home</a></p>
+	</footer>
 </body>
 </html>
