--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 	<h1>Here you can find more details about our product</h1>
+
+	<footer>
+		<p><a href="index.html">Home</a></p>
+	</footer>
 </body>
 </html>
