--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,6 +5,22 @@
 	<title>Document</title>
 </head>
 <body>
-<<h1> Hello world</h1>	
+<h1> Hello world</h1>	
+<p> Herro everybody, whats up? HTMl is pretty nifty, right?... or</p>
+<strong> OH NO!!!!!!!!!</strong>
+<a href="Screenshot (13).png"> I wonder what this links to...? </a>
+
+
+<em> WHat? no she didn't!!!!!</em>
+My favorite things!!!
+<ul>
+	<li>Cheeese</li>
+	<li>Pumpkins</li>
+</ul>
+<ol>
+	<li>Swords</li>
+	<li>Shields</li>
+	<li>lice</li>
+</ol>
 </body>
 </html>
