--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -2,55 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Practice creating tables</title>
+	<title>Document</title>
 </head>
-
 <body>
-	<h1>This is a html table</h1>
-  <table border="1">
-  	<tr>
-  		<th>Colors</th>
-  		<th>Pets</th>
-  		<th>Fruit</th>
-  	</tr>
-  	<tr>
-  		<td>Blue</td>
-  		<td>Cats</td>
-  		<td>Apples</td>
-  	</tr>
-  	<tr>
-  		<td>Yellow</td>
-  		<td>Dogs</td>
-  		<td>Plums</td>
-  	</tr>
-  	<tr>
-  		<td>Pink</td>
-  		<td>Pigs</td>
-  		<td>Oranges</td>
-  	</tr>
-  </table>
-
-  <h2>This is a better html table</h2>
-
-    <table border="1">
-      <tr>
-        <th>Column 1</th>
-        <th>Column 2</th>
-        <th>Column 3</th>
-      </tr>
-      <tr>
-        <td>Cell 1</td>
-        <td colspan="2">Cell 2</td>
-      </tr>
-      <tr>
-        <td rowspan=2>Two rows</td>
-        <td>Cell 1</td>
-        <td>Cell 2</td>
-      </tr>
-      <tr>
-        <td>Cell 1</td>
-        <td>Cell 2</td>
-      </tr>
-  </table>
+<table>
+	<tr>
+	<th> Name</th>
+	<th> Favorite Color</th>
+	<th> Where were you born? </th>	
+	</tr>
+	<tr>
+	 <td>John</td>
+	 <td>Blue </td>	
+	 <td>Thailand</td>		
+	</tr>
+	<tr>
+	  <td>Sarah</td>
+	 <td> Red</td>	
+	 <td>Vermont</td>	
+	</tr>
+	<tr>
+	 <td>Jim</td>
+	 <td>Purple</td>	
+	 <td>Alaska</td>	
+	</tr>
+</table>	
 </body>
 </html>
