--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-<table>
+<table border=3>
 	<tr>
 	<th> Name</th>
 	<th> Favorite Color</th>
@@ -25,6 +25,28 @@
 	 <td>Jim</td>
 	 <td>Purple</td>	
 	 <td>Alaska</td>	
+	</tr>
+</table>
+<table border=3>
+	<tr>
+	<th> Name</th>
+	<th> Favorite Color</th>
+	<th> Where were you born? </th>	
+	</tr>
+	<tr>
+	 <td>John</td>
+	 <td rowspan="2">Blue  </td>	
+	 <td>Thailand</td>		
+	</tr>
+	<tr>
+	  <td>Sarah</td>
+	 
+	 <td>Vermont</td>	
+	</tr>
+	<tr>
+	 
+	 <td colspan= "3">Purple</td>	
+	 
 	</tr>
 </table>	
 </body>
