--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -16,7 +16,7 @@
     <p>I want to become the kind of employee who contributes to her team, champions projects that will add value for the customer, remains humble and introspective, and can pay rent.</p>
   </section>
   <section id="contact-info">
-    <p>287-187-3726</p>
+    <p id="phone">287-187-3726</p>
     <p>imoganary@gmail.com</p>
     <p>123 Main Street, Anytown, USA 101010</p>
   </section>
