--- a/css/gps2-1.html
+++ b/css/gps2-1.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>GitHub: Git Cheat Sheet</h1>
+      <img src="http://images5.aplus.com/uc-up/d71d2400-2863-410b-a112-e79410fd7df6/d71d2400-2863-410b-a112-e79410fd7df6.format_jpeg.inline_yes.jpg" alt="cutecat">
       <p>Git is the open source distributed version control system that
         facilitates GitHub activities on your laptop or desktop.
         This cheat sheet summarizes commonly used Git command line
@@ -267,6 +268,5 @@
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
   </body>
 </html>
